--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="navbar">
-    <h2>ChatBot</h2>
+    <h2 style="text-align: left">ChatBot</h2>
   </div>
 
   <section id="demo">
